--- a/tablas.html
+++ b/tablas.html
@@ -8,6 +8,9 @@
     <title>Tablas en HTML</title>
 
     <style>
+        table {
+            font-family: Arial, Helvetica, sans-serif;
+        }
         table.tabla1 {
             border: 4px solid black;
             border-collapse: collapse;
@@ -31,7 +34,6 @@
             border: 4px solid black;
             width: 300px;
             border-collapse: collapse;
-            font-family: Arial, Helvetica, sans-serif;
         }
 
         .tabla2 th {
