clase del martes 25-10

--- a/listas.html
+++ b/listas.html
@@ -53,13 +53,12 @@
     </p>
 
     <dl>
-        <dt>Café</dt>
+        <dt id="coffee">Café</dt>
         <dd>- Bebida de color negro que se bebe caliente.</dd>
         <dt>Leche</dt>
         <dd>- Bebida de color blanco que se bebe fría o caliente.</dd>
     </dl>
-
-
+    
 </body>
 
 </html>
