--- a/formularios.html
+++ b/formularios.html
@@ -7,11 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
 
+    <link href="http://fonts.cdnfonts.com/css/chill-out-gang" rel="stylesheet">
     <link rel="stylesheet" href="general.css">
 
     <style>
+        form.simple-form {
+            background: linear-gradient(45deg,rgba(150, 209, 255, 0.55), transparent);
+            border-radius: 5px;
+            padding: 10px;
+        }
+
         /* Selecciona ÚNICAMENTE a los hijos directos del form */
-        form>div {
+        form.simple-form>div {
             display: flex;
             justify-content: space-between;
 
@@ -19,15 +26,20 @@
             margin-bottom: 5px;
         }
 
+        form.simple-form h2, h1 {
+            font-family: "Chill-out gang";
+            margin-top: 0;
+        }
+
         /* Selecciona al div que es el último hijo del form */
-        form div:last-child {
+        form.simple-form div:last-child {
             justify-content: flex-start;
         }
 
-        form input, form div button {
+        form.simple-form input, form div button {
             border: none;
             border-radius: 4px;
-            background-color: rgb(150, 150, 150);
+            background-color: rgb(255, 255, 255);
             margin-right: 5px;
             font-weight: bold;
             text-transform: uppercase;
@@ -41,7 +53,7 @@
 
     <h2>Formulario sencillo</h2>
 
-    <form action="#">
+    <form class="simple-form" action="#">
         <h2>HTML Form</h2>
         <div>
             <label for="firstName">First Name: </label>
@@ -83,6 +95,12 @@
             <input type="submit" value="Submit">
             <button type="reset">Reset</button>
         </div>
+    </form>
+
+    <h2>Formulario de contacto</h2>
+
+    <form action="">
+
     </form>
 
 </body>
