--- a/frontend/formularios/formularios.html
+++ b/frontend/formularios/formularios.html
@@ -8,42 +8,11 @@
     <title>Formulario</title>
 
     <link href="http://fonts.cdnfonts.com/css/chill-out-gang" rel="stylesheet">
-    <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="../general.css">
+    <link rel="stylesheet" href="./css/form-styles.css">
 
     <style>
-        form.simple-form {
-            background: linear-gradient(45deg,rgba(150, 209, 255, 0.55), transparent);
-            border-radius: 5px;
-            padding: 10px;
-        }
 
-        /* Selecciona ÚNICAMENTE a los hijos directos del form */
-        form.simple-form>div {
-            display: flex;
-            justify-content: space-between;
-
-            width: 350px;
-            margin-bottom: 5px;
-        }
-
-        form.simple-form h2, h1 {
-            font-family: "Chill-out gang";
-            margin-top: 0;
-        }
-
-        /* Selecciona al div que es el último hijo del form */
-        form.simple-form div:last-child {
-            justify-content: flex-start;
-        }
-
-        form.simple-form input, form div button {
-            border: none;
-            border-radius: 4px;
-            background-color: rgb(255, 255, 255);
-            margin-right: 5px;
-            font-weight: bold;
-            text-transform: uppercase;
-        }
     </style>
 </head>
 
@@ -99,7 +68,24 @@
 
     <h2>Formulario de contacto</h2>
 
-    <form action="">
+    <form class="contact" action="">
+
+        <div class="contact-left">
+            <input type="text" placeholder="Enter your name">
+            <br>
+            <input type="text" placeholder="Enter a valid email address">
+            <br>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+
+            <input type="submit" name="" id="" value="SUBMIT">
+        </div>
+       
+    </form>
+
+    <h2>Formulario de alquiler de vehículos</h2>
+
+    <form class="renting" action="">
+        
 
     </form>
 
