añadido css forms

--- a/frontend/formularios/formularios.html
+++ b/frontend/formularios/formularios.html
@@ -85,7 +85,7 @@
     <h2>Formulario de alquiler de vehículos</h2>
 
     <form class="renting" action="">
-        
+        <label for="">Por favor</label>
 
     </form>
 
