creada app tip calc

--- a/frontend/JavaScript/salida-datos.html
+++ b/frontend/JavaScript/salida-datos.html
@@ -32,7 +32,7 @@
 
     document.write('Texto escrito usando document.write()');
 
-    window.alert('Este es mi mensaje en la caja de alerta');
+    // window.alert('Este es mi mensaje en la caja de alerta');
 
     console.log('Lo que escriba aquí sólo se podrá ver accediendo a la consola del navegador');
 
