app tio-calculator terminada

--- a/frontend/JavaScript/ejercicios/calculadora de propinas/index.html
+++ b/frontend/JavaScript/ejercicios/calculadora de propinas/index.html
@@ -18,7 +18,7 @@
                 Gasto total de la cuenta:
             </p>
             <p>
-                <input name="inputCuenta" id="cuentaTotal" type="number"> €
+                <input name="inputCuenta" id="cuentaTotal" type="number" min="0" oninput="validity.valid||(value='')"> €
             </p>
         </div>
 
@@ -41,7 +41,7 @@
                 Número de comensales:
             </p>
             <p>
-                <input id="numPersonas" type="number"> personas.
+                <input id="numPersonas" type="number" min="0" oninput="validity.valid||(value='')"> personas.
             </p>
             
         </div>
