--- a/frontend/JavaScript/ejercicios/reloj digital/index.html
+++ b/frontend/JavaScript/ejercicios/reloj digital/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reloj Digital en JavaScript</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- El h1 es el que va a albergar el reloj, el texto es una plantilla visual -->
     <h1 id="pantallaReloj">
         00:00:00 am
     </h1>
-    <h3>
+    <h5 id="pantallaFecha">
         Día, 00 de mes de año
-    </h3>
+    </h5>
 </body>
 <script src="script.js"></script>
 </html>
