--- a/frontend/JavaScript/ejercicios/cronómetro/index.html
+++ b/frontend/JavaScript/ejercicios/cronómetro/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1><span id="minutos">00</span>:<span id="segundos">00</span>:<span id="cents">00</span></h1>
+    <h1 id="display"><span id="minutos">00</span>:<span id="segundos">00</span>:<span id="cents">00</span></h1>
 
     <div>
         <button onclick="start()">START</button>
-        <button>STOP</button>
+        <button onclick="">STOP</button>
         <button>RESET</button>
     </div>
     
