--- a/frontend/JavaScript/ejercicios/cronómetro/index.html
+++ b/frontend/JavaScript/ejercicios/cronómetro/index.html
@@ -12,9 +12,9 @@
     <h1 id="display"><span id="minutos">00</span>:<span id="segundos">00</span>:<span id="cents">00</span></h1>
 
     <div>
-        <button onclick="start()">START</button>
-        <button onclick="">STOP</button>
-        <button>RESET</button>
+        <button id="btnStart" onclick="startCrono()">START</button>
+        <button onclick="stop()">STOP</button>
+        <button onclick="reset()">RESET</button>
     </div>
     
 </body>
