app ahoracado creada

--- a/frontend/JavaScript/ejercicios/cronómetro/index.html
+++ b/frontend/JavaScript/ejercicios/cronómetro/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronómetro en JavaScript</title>
 
+    <!-- favicon -->
     <link rel="shortcut icon" href="https://cdn.iconscout.com/icon/free/png-256/timer-76-444302.png" type="image/x-icon">
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
