--- a/frontend/CSS/disposicion-y-alineamiento.html
+++ b/frontend/CSS/disposicion-y-alineamiento.html
@@ -8,6 +8,8 @@
     <title>Layout</title>
     <link rel="stylesheet" href="../general.css">
 
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <style>
         .container {
             color: white;
@@ -48,17 +50,20 @@
             justify-content: center;
 
         }
+
         .flex-container>div {
             border: 2px solid #00a6ff;
             width: 100%;
             padding: 10px;
         }
+
         .img {
             height: 150px;
             background-image: url(https://images.pexels.com/photos/10131568/pexels-photo-10131568.jpeg);
             background-position: center;
             background-size: cover;
         }
+
         .flex-container button {
             background: #00a6ff;
             border: none;
@@ -66,6 +71,119 @@
             padding: 10px;
             color: white;
             font-size: 1.1rem;
+        }
+
+        /* ------------- Ancho-------- */
+        .divW {
+            width: 500px;
+            margin: auto;
+
+            border: 4px solid gray;
+        }
+
+        .divMW {
+            max-width: 500px;
+            margin: auto;
+        }
+
+        /* ---------- position -------- */
+        .divRel {
+            position: relative;
+            left: 30px;
+
+            border: 3px solid #00a6ff;
+        }
+
+        #btnTop {
+            border: none;
+            background-color: #00a6ff;
+            color: white;
+            border-radius: 5px;
+            padding: 5px 7.5px;
+            font-size: 1.25rem;
+            cursor: pointer;
+
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            z-index: 5;
+        }
+
+        .relative {
+            position: relative;
+            height: 200px;
+            width: 400px;
+        }
+        .divAbs {
+            position: absolute;
+            height: 100px;
+            width: 200px;
+
+            bottom: 10px;
+            right: 10px;
+        }
+
+        /* Menú sticky */
+        nav {
+            background: #175474;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 30px;
+
+            position: sticky;
+            top: 0;
+            z-index: 4;
+        }
+        nav div {
+            text-align: center;
+        }
+        nav a {
+            text-decoration: none;
+            color: white;
+            padding: 6px;
+            margin: 0;
+            box-sizing: border-box;
+        }
+        nav a:hover {
+            background-color: #00a6ff;
+        }
+
+        /* Posicionar texto en img */
+        .contenedor-img {
+            height: 400px;
+            width: 100%;
+
+            background-image: url(https://images.pexels.com/photos/34107/milky-way-stars-night-sky.jpg);
+            background-size: cover;
+            background-position: center;
+
+            position: relative;
+        }
+        .contenedor-img p{
+            color: white;
+            text-align: center;
+            width: 80px;
+
+            position: absolute;
+        }
+        .top {
+            top: 0;
+        }
+        .right {
+            right: 0;
+        }
+        .bottom {
+            bottom: 0;
+        }
+        .left {
+            left: 0;
+        }
+        .center {
+            top: 50%;
+            left: 50%;
+
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
@@ -159,7 +277,7 @@
         ahí.
     </p>
     <p>
-        Al coultar un elemento con <code>visibility: hidden</code> el elemento no se mostrará pero el espacio que ocupa
+        Al ocultar un elemento con <code>visibility: hidden</code> el elemento no se mostrará pero el espacio que ocupa
         quedará en blanco.
     </p>
 
@@ -180,6 +298,193 @@
             <button onclick="restablecer()">Restablecer</button>
         </div>
     </div>
+
+    <hr>
+
+    <h2>Anchura</h2>
+    <h3>width y max-width</h3>
+
+    <div class="container">
+        <p>
+            Como hemos mencionado anteriormente, un elemento de bloque siempre ocupa todo el ancho disponible.
+        </p>
+
+        <p>
+            Asignar una anchura con <code>width</code> evitará que un elemento de bloque se estire a los bordes de su
+            contenedor. Entonces podremos asignar su margen <code>margin: auto</code> para centrar horizontalmente el
+            elemento respecto a su contenedor. El elemento pasará a ocupar el ancho especificado y el resto del espacio
+            sobrante será repartido equitativamente entre sus márgenes.
+        </p>
+
+        <div class="divW">
+            Este elemento <code>div</code> tiene un ancho de 500px y un margin en auto.
+        </div>
+
+        <p>
+            El problema de esto, es que al asignar un espacio fijo nos dará problemas en pantallas pequeñas. El elemento
+            se sladrá del contenedor y el navegador añadirá una barra de scroll horizontal
+        </p>
+
+        <p>
+            Si por el contrario, usamos <code>max-width</code>, mejorará el manejo del navegador de estos elementos.
+            Esto es muy importante a la hora de contruir sitios web para dispositivos pequeños.
+        </p>
+
+        <div class="divMW">
+            Este elemento <code>div</code> tiene un <code>max-width</code> de 500px y un margin en auto.
+        </div>
+    </div>
+
+    <hr>
+
+    <h2>La propiedad <code>position</code></h2>
+    <p>
+        Esta propiedad define el método de posicionamiento de un elemento.
+    </p>
+    <p>
+        Hay 5 tipos de posición.
+    </p>
+    <ul>
+        <code>
+            <li>static</li>
+            <li>relative</li>
+            <li>fixed</li>
+            <li>absolute</li>
+            <li>sticky</li>
+        </code>
+    </ul>
+
+    <p>
+        Los elementosse posicionan con las propiedades top, left, right, bottom. Sin embargo estas propiedades no
+        funcionarán sin especificar primero la <code>position</code>. Además, dependiendo del tipo de
+        <code>position</code> las propiedades funcionarán de manera distinta.
+    </p>
+
+    <h3><code>position: static</code></h3>
+    <p>
+        Todos los elementos tienen este valor por defecto.
+    </p>
+
+    <p>
+        Las propiedades top, bottom, left y right no afectan a los elementos con posición estática.
+    </p>
+
+    <h3><code>position: relative</code></h3>
+    <p>
+        Un elemento con este valor se posicionará de manera relativa a su posición normal. Es decir, el centro del eje
+        será sobre sí mismo.
+    </p>
+
+    <div class="divRel">
+        Este <code>div</code> tiene <code>position: relative</code>
+    </div>
+
+    <h3><code>position: fixed</code></h3>
+    <p>
+        Un elemento con este valor, se posicionará relativamente respecto a la pantalla. Lo que quiere decir que tendrá
+        siempre la misma posición incluso si scrolleamos la web.
+    </p>
+
+    <button id="btnTop" onclick="toTop()">
+        <i class="bi bi-arrow-bar-up"></i>
+    </button>
+
+    <h3><code>position: absolute</code></h3>
+    <p>
+        Un elemento con este valor se posicionará respecto a su contenedor posicionado (no estático).
+    </p>
+    <p>
+        Si un elemento absoluto no tiene ancestro posicionados, usará el body y actuará como un
+        <code>position: fixed</code>.
+    </p>
+
+    <div class="container relative">
+        Este elemento <code>div</code> tiene una <code>position: relative</code>
+        <div class="divAbs">
+            Este elemento <code>div</code> tiene una <code>position: absolute</code>
+        </div>
+    </div>
+
+    <!-- <div class="divAbs">
+        Esto es un div absoluto sin ancestro posicionado!!!!
+    </div> -->
+
+    <h3><code>position: sticky</code></h3>
+    <p>
+        Un elemento <code>sticky</code> alternará su comportamiento entre <code>relative</code> y <code>fixed</code> dependiendo de la posición de scroll de la página.
+    </p>
+
+    <nav>
+        <div>
+            <a href="#">HOME</a>
+            <a href="#">Services</a>
+            <a href="#">Shop</a>
+        </div>
+        <div>
+            <a href="#">About Us</a>
+            <a href="#">Contact</a>
+        </div>
+    </nav>
+
+    <hr>
+
+    <h3>Posicionar texto respecto a una imagen</h3>
+
+    <div class="contenedor-img">
+        <p class="top left">Top Left</p>
+        <p class="top right">Top Right</p>
+        <p class="center">Center</p>
+        <p class="bottom left">Bottom Left</p>
+        <p class="bottom right">Bottom Right</p>
+    </div>
+
+    <pre>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        ..
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        ..
+    </pre>
+
 </body>
 <script>
     function showPanel() {
@@ -201,6 +506,16 @@
     function restablecer() {
         quitarFoto.style.display = 'block';
         esconderFoto.style.visibility = 'visible';
+    }
+
+
+    // Botón to top
+    function toTop() {
+        // Opera, Chrome, Edge, Firefox
+        document.documentElement.scrollTop = 0;
+
+        // Safari
+        document.body.scrollTop = 0;
     }
 </script>
 
