--- a/frontend/JavaScript/ejercicios/calculadora/index.html
+++ b/frontend/JavaScript/ejercicios/calculadora/index.html
@@ -27,16 +27,17 @@
                 <button>8</button>
                 <button>9</button>
 
-                
-
                 <button>4</button>
                 <button>5</button>
                 <button>6</button>
+
                 <button>1</button>
                 <button>2</button>
                 <button>3</button>
-                <button class="zero">0</button>
+                
+                <button>0</button>
                 <button>.</button>
+                <button class="clear">C</button>
             </div>
             <div class="equal">
                 <button>=</button>
