calc con tabla básica

--- a/frontend/JavaScript/ejercicios/calculadora/como-tabla.html
+++ b/frontend/JavaScript/ejercicios/calculadora/como-tabla.html
@@ -7,15 +7,27 @@
     <title>Calculadora</title>
 </head>
 <style>
+    table {
+        width: 300px;
+        text-align: center;
+        padding: 10px 30px;
+        background: rgb(55, 55, 75);
+    }
     table td {
         background: rgb(131, 131, 235);
+    }
+    table input {
+        width: 100%;
+        box-sizing: border-box;
     }
 </style>
 <body>
 
     <table>
         <tr>
-            <input type="text">
+            <td colspan="4">
+                <input type="text">
+            </td>
         </tr>
         <tr>
             <td>+</td>
