--- a/frontend/JavaScript/ejercicios/calculadora/como-tabla.html
+++ b/frontend/JavaScript/ejercicios/calculadora/como-tabla.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,31 @@
     <title>Calculadora</title>
 </head>
 <style>
+    @import url('https://fonts.cdnfonts.com/css/sansbetween');
+    @import url('https://fonts.cdnfonts.com/css/digital-numbers');
+
     table {
         width: 300px;
         text-align: center;
         padding: 10px 30px;
         background: rgb(55, 55, 75);
+        font-family: 'SansBetween', sans-serif;
     }
+
     table td {
         background: rgb(131, 131, 235);
     }
+
     table input {
         width: 100%;
         box-sizing: border-box;
+        font-family: 'Digital Numbers', sans-serif;
+        font-weight: bold;
+        color: #1e2831;
+        background: #e8ffaf;
     }
 </style>
+
 <body>
 
     <table>
@@ -32,8 +44,8 @@
         <tr>
             <td>+</td>
             <td>-</td>
-            <td>*</td>
-            <td>/</td>
+            <td>x</td>
+            <td>&#247</td>
         </tr>
         <tr>
             <td>7</td>
@@ -57,6 +69,7 @@
             <td>C</td>
         </tr>
     </table>
-    
+
 </body>
+
 </html>
