--- a/frontend/JavaScript/ejercicios/calculadora/index.html
+++ b/frontend/JavaScript/ejercicios/calculadora/index.html
@@ -13,12 +13,12 @@
 <body>
     <div class="container">
         <div class="display">
-            <input type="text">
+            <input type="text" id="input">
         </div>
         <div class="operators">
             <button>+</button>
             <button>-</button>
-            <button>x</button>
+            <button>&times</button>
             <button>&#247</button>
         </div>
         <div class="keys">
@@ -34,17 +34,17 @@
                 <button>1</button>
                 <button>2</button>
                 <button>3</button>
-                
+
                 <button>0</button>
                 <button>.</button>
-                <button class="clear">C</button>
+                <button class="clear" id="clear">C</button>
             </div>
-            <div class="equal">
+            <div class="equal" id="equal">
                 <button>=</button>
             </div>
         </div>
     </div>
 
 </body>
-
+<script src="script.js"></script>
 </html>
