calcu codigo sencillo

--- a/frontend/JavaScript/ejercicios/calculadora/como-tabla.html
+++ b/frontend/JavaScript/ejercicios/calculadora/como-tabla.html
@@ -38,7 +38,7 @@
     <table>
         <tr>
             <td colspan="4">
-                <input type="text">
+                <input type="text" id="input">
             </td>
         </tr>
         <tr>
@@ -48,31 +48,67 @@
             <td id="division">&#247;</td>
         </tr>
         <tr>
-            <td>7</td>
-            <td>8</td>
-            <td>9</td>
-            <td rowspan="4">=</td>
+            <td class="numeros" onclick="test(7)">7</td>
+            <td class="numeros" onclick="test(8)">8</td>
+            <td class="numeros" onclick="test(9)">9</td>
+            <td rowspan="4" id="igual">=</td>
         </tr>
         <tr>
-            <td>4</td>
-            <td>5</td>
-            <td>6</td>
+            <td class="numeros" onclick="test(4)">4</td>
+            <td class="numeros" onclick="test(5)">5</td>
+            <td class="numeros" onclick="test(6)">6</td>
         </tr>
         <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
+            <td class="numeros" onclick="test(1)">1</td>
+            <td class="numeros" onclick="test(2)">2</td>
+            <td class="numeros" onclick="test(3)">3</td>
         </tr>
         <tr>
-            <td>0</td>
-            <td>.</td>
-            <td>C</td>
+            <td class="numeros" onclick="test(0)">0</td>
+            <td class="numeros" onclick="test('.')">.</td>
+            <td id="limpiar">C</td>
         </tr>
     </table>
 
 </body>
 <script>
+    // botones operadores
     const btnSuma = document.getElementById('suma');
+    const btnResta = document.getElementById('resta');
+    const btnMulti = document.getElementById('multi');
+    const btnDiv = document.getElementById('division');
+
+    // pantalla
+    const pantalla = document.getElementById('input');
+
+    // botones de números
+    const numeros = document.getElementsByClassName('numeros');
+
+    // botón de limpiar
+    const btnLimpiar = document.getElementById('limpiar');
+
+    // botón de igual
+    const btnIgual = document.getElementById('igual');
+
+    // variables para guardar datos
+    let valor1, valor2, resultado, operador = '';
+    pantalla.value = 0; //valor por defecto en pantalla
+
+    //----------------------
+
+    // EVENTOS
+    // evento que al pulsar un número se escriba en pantalla
+
+    function test(dato) {
+        console.log('has pulsado un número');
+        console.log(dato);
+        pantalla.value += dato;
+    }
+
+
+
+
+
 
     btnSuma.onclick = () => {
         console.log('estas sumando')
