calcu tabla limpia

--- a/frontend/JavaScript/ejercicios/calculadora/como-tabla.html
+++ b/frontend/JavaScript/ejercicios/calculadora/como-tabla.html
@@ -48,24 +48,24 @@
             <td id="division">&#247;</td>
         </tr>
         <tr>
-            <td class="numeros" onclick="test(7)">7</td>
-            <td class="numeros" onclick="test(8)">8</td>
-            <td class="numeros" onclick="test(9)">9</td>
+            <td onclick="test(7)">7</td>
+            <td onclick="test(8)">8</td>
+            <td onclick="test(9)">9</td>
             <td rowspan="4" id="igual">=</td>
         </tr>
         <tr>
-            <td class="numeros" onclick="test(4)">4</td>
-            <td class="numeros" onclick="test(5)">5</td>
-            <td class="numeros" onclick="test(6)">6</td>
+            <td onclick="test(4)">4</td>
+            <td onclick="test(5)">5</td>
+            <td onclick="test(6)">6</td>
         </tr>
         <tr>
-            <td class="numeros" onclick="test(1)">1</td>
-            <td class="numeros" onclick="test(2)">2</td>
-            <td class="numeros" onclick="test(3)">3</td>
+            <td onclick="test(1)">1</td>
+            <td onclick="test(2)">2</td>
+            <td onclick="test(3)">3</td>
         </tr>
         <tr>
-            <td class="numeros" onclick="test(0)">0</td>
-            <td class="numeros" onclick="test('.')">.</td>
+            <td onclick="test(0)">0</td>
+            <td onclick="test('.')">.</td>
             <td id="limpiar">C</td>
         </tr>
     </table>
